[package]
name = "ball-pass-game"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
argh = "0.1.4"
thiserror = "1.0.24"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
bincode = "1.3.1"
bytes = "0.5.0"
byteorder = "1.4.2"
serde = { version = "1.0.111", features = ["derive"] }
futures-util = { version = "0.3", features = ["async-await-macro", "sink"] }
flume = "0.10.2"
